--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,15 @@
 name = "owlnigma"
 version = "0.1.0"
 edition = "2021"
+build = "src/build.rs"
 
 [dependencies]
+aes = "0.8.4"
+aes-gcm = "0.10.3"
 clap = { version = "4.5.18", features = ["derive"] }
 rand = "0.8.5"
+rust-crypto = "0.2.36"
 tokio = { version = "1.40.0", features = ["full"] }
+
+[build-dependencies]
+rand = "0.8.5"
