--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,14 +3,14 @@ name: Build
 on:
   push:
     branches:
-      - ['master']
+      - main
   pull_request:
     branches:
-      - ['*']
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -31,14 +31,15 @@ jobs:
       - name: Build for ${{ matrix.os }} ${{ matrix.arch }}
         run: |
           if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
-            cross build --target ${{ matrix.arch }}-unknown-linux-gnu --release
+            cargo build --target ${{ matrix.arch }}-unknown-linux-gnu --release
           else
-            cross build --target ${{ matrix.arch }}-pc-windows-msvc --release
+            cargo build --target ${{ matrix.arch }}-pc-windows-msvc --release
           fi
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build
-          path: target/${{ matrix.arch }}-unknown-linux-gnu/release/owlnigma
-          path: target/${{ matrix.arch }}-pc-windows-msvc/release/owlnigma.exe
+          path: |
+            target/x86_64-unknown-linux-gnu/release/your_project
+            target/x86_64-pc-windows-msvc/release/your_project.exe
