--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Rust
-        uses: actions/setup-rust@v1
+        uses: actions/setup-rust
         with:
           rust-version: 1.69
 
@@ -41,5 +41,5 @@ jobs:
         with:
           name: build
           path: |
-            target/x86_64-unknown-linux-gnu/release/your_project
-            target/x86_64-pc-windows-msvc/release/your_project.exe
+            target/x86_64-unknown-linux-gnu/release/owlnigma
+            target/x86_64-pc-windows-msvc/release/owlnigma.exe
