--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,23 +19,23 @@ jobs:
           - os_name: Linux-aarch64
             os: ubuntu-20.04
             target: aarch64-unknown-linux-musl
-            bin: figctl-linux-arm64
+            bin: owlnigma-linux-arm64
           - os_name: Linux-x86_64
             os: ubuntu-20.04
             target: x86_64-unknown-linux-gnu
-            bin: figctl-linux-amd64
+            bin: owlnigma-linux-amd64
           - os_name: Windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-msvc
-            bin: figctl-amd64.exe
+            bin: owlnigma.exe
           - os_name: macOS-x86_64
             os: macOS-latest
             target: x86_64-apple-darwin
-            bin: figctl-darwin-amd64
+            bin: owlnigma-darwin-amd64
           - os_name: macOS-aarch64
             os: macOS-latest
             target: aarch64-apple-darwin
-            bin: figctl-darwin-arm64
+            bin: owlnigma-darwin-arm64
         toolchain:
           - stable
     steps:
